Closed Bug 1383988 Opened 8 years ago Closed 8 years ago

stylo: Image resizer in contenteditable again doesn't show up

Categories

(Core :: CSS Parsing and Computation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: heycam, Assigned: heycam)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1374999 +++ Something regressed bug 1374999's fix for contenteditable handles.
Looks like it was regressed by bug 1374175.
Blocks: 1374175
Oh-oh, that means the image resizer needs explicit reconstruct frame damage?
Yes, indeed. At the end of HTMLEditor::CreateAnonymousElement, we call nsIPresShell::PostRecreateFramesFor, but at this point, the element is unstyled, so posting the ReconstructFrame is ignored. I think we just need to ensure the new element for the handle is styled before that call.
Priority: -- → P2
Comment on attachment 8889769 [details] Bug 1383988 - stylo: Ensure editor handle elements are styled before attempting to construct frames for them. https://reviewboard.mozilla.org/r/160852/#review166108 Thanks for fixing!
Attachment #8889769 - Flags: review?(hikezoe) → review+
Pushed by cmccormack@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/946864b7ee18 stylo: Ensure editor handle elements are styled before attempting to construct frames for them. r=hiro
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Depends on: 1384526
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: