Bug 1383988 - stylo: Ensure editor handle elements are styled before attempting to construct frames for them. r=hiro

MozReview-Commit-ID: 2T0ZjP00U7A